fix navbar spacing and color

--- a/admin_site/static/admin_site/css/bootstrap_fix.css
+++ b/admin_site/static/admin_site/css/bootstrap_fix.css
@@ -5,3 +5,7 @@ caption {
 .navbar-toggler {
   border-color: transparent !important;
 }
+
+.welcome-msg {
+  margin-top: 10px;
+}
